# auto-toss

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
auto_toss/: audit.py  cli.py  client.py  config.py  errors.py  execution.py  lifecycle.py  orders.py  paper.py  preflight.py  reconciliation.py  reporting.py  risk.py  runner.py  strategy.py
docs/SOT/: architecture.md  documentation-policy.md
docs/llm-wiki/: README.md
docs/llm-wiki/architecture/: audit-reporting-cli.md  auto-trading-safety-core.md  order-lifecycle-reliability.md  paper-trading.md
docs/plans/: 2026-06-13-audit-reporting-cli-design.md  2026-06-13-audit-reporting-cli-implementation.md  2026-06-13-auto-trading-safety-core-design.md  2026-06-13-auto-trading-safety-core-implementation.md  2026-06-13-order-lifecycle-reliability-design.md  2026-06-13-order-lifecycle-reliability-implementation.md  2026-06-13-paper-trading-and-docs-design.md  2026-06-13-paper-trading-and-docs-implementation.md  2026-06-13-realtime-stock-watch-design.md  2026-06-13-realtime-stock-watch-implementation.md  2026-06-13-toss-auto-trading-design.md  2026-06-13-toss-auto-trading-implementation.md
tests/: test_audit.py  test_cli_commands.py  test_cli_paper.py  test_cli_smoke.py  test_client_auth.py  test_client_endpoints.py  test_client_requests.py  test_config.py  test_docs_and_runtime.py  test_execution.py  test_lifecycle.py  test_orders.py  test_packaging.py  test_paper.py  test_preflight.py  test_reconciliation.py  test_reporting.py  test_risk.py  test_runner.py  test_strategy.py
(+16 files in other folders)
