[project]
name = "auto-toss"
version = "0.1.0"
description = "Safe Toss Securities Open API CLI foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
auto-toss = "auto_toss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
